# kaggle-Jigsaw2025

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  Rule Violation Detection MLE 项目完整实现指南.md  api.py  code  pyproject.toml  requirement.txt  setup.py
.github/workflows/: ci.yml
config/: __init__.py  config.yaml  model_config.py
docs/: DEPLOYMENT.md  PROJECT_COMPLETION_CHECKLIST.md
scripts/: inference.py  train.py
src/: __init__.py
src/data/: __init__.py  loader.py  preprocessor.py  triplet_dataset.py
src/features/: __init__.py  centroids.py  embeddings.py
src/inference/: __init__.py  predictor.py
src/models/: __init__.py  embedding_model.py  emdedding_model.py  trainer.py
src/utils/: __init__.py  logging_utils.py  text_utils.py
tests/: __init__.py  conftest.py  test_data_loader.py  test_predictor.py  test_preprocessor.py
